--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     font-family: 'Luxurious Roman', cursive;
     background-color: rgb(241, 226, 226);
+
+}
+
 }
 
 p {
@@ -9,6 +12,7 @@ p {
 
 h1 h2 {
     font-size: 50px;
+
 }
 
 span {
@@ -18,6 +22,7 @@ span {
 
 section {
     display: flex;
+    margin-top: 5%;
 }
 
 .frist-div {
@@ -27,7 +32,6 @@ section {
 
 .frist-div img {
     width: 70%;
-    padding-top: 8%;
     border-radius: 50%;
 
 
@@ -41,4 +45,7 @@ a {
     border-radius: 15px;
     font-weight: 600;
 }
+
+#div-4 {
+    padding-right: 5%;
 }
