--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
 
 }
 
-}
 
 p {
     text-align: justify;
+    text-justify: inter-word;
 }
 
-h1 h2 {
+.head1 {
     font-size: 50px;
 
 }
@@ -18,26 +18,27 @@ h1 h2 {
 span {
     color: blueviolet;
     font-weight: bolder;
+    font-size: 30px;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-top: 5%;
 }
 
-.frist-div {
+.frist-web {
     width: 50%;
-    padding-left: 12%;
+    padding-left: 10%;
 }
 
-.frist-div img {
+.frist-web img {
     width: 70%;
     border-radius: 50%;
 
 
 }
 
-a {
+.btn {
     text-decoration: none;
     background-color: blueviolet;
     color: white;
@@ -48,4 +49,83 @@ a {
 
 #div-4 {
     padding-right: 5%;
+}
+
+a {
+    text-decoration: none;
+}
+
+.experience {
+    color: blueviolet;
+}
+
+.experi {
+    width: 50%;
+    box-shadow: 10px 10px 25px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 2%;
+    padding-right: 5%;
+    border-radius: 10px;
+    border-left: 5px solid blueviolet;
+}
+
+#center {
+    text-align: center;
+}
+
+.section3 {
+    margin-top: 5%;
+}
+
+#follow {
+    text-align: center;
+    color: blueviolet;
+
+
+}
+
+#socialmedia {
+    text-align: center;
+    padding: 5px;
+}
+
+.medialink {
+    margin-left: 5px;
+
+}
+
+.link {
+    margin-top: 5%;
+}
+
+.comment {
+    margin-top: 15%;
+    margin-left: 50%;
+    position: absolute;
+    width: 500px;
+    transform: translate(-50%, -50%);
+}
+
+.comment h2 {
+    font-size: 40px;
+    margin-bottom: 30px;
+
+}
+
+.comment input {
+    width: 100%;
+    height: 50px;
+    padding: 0 20px;
+    border-radius: 5px;
+    border-color: 1px solid gray;
+
+}
+
+.comment textarea {
+    width: 100%;
+    height: 150px;
+    padding: 15px 20px;
+    border-radius: 5px;
+    border-color: 1px solid gray;
 }
