--- a/style.css
+++ b/style.css
@@ -1,6 +1,43 @@
+nav {
+    background-color: blueviolet;
+    width: 100%;
+    height: 80px;
+
+}
+
+strong {
+    color: white;
+    font-size: 40px;
+    padding: 0 100px;
+    line-height: 80px;
+    font-weight: bold;
+}
+
+ul {
+    float: right;
+    margin-right: 25px;
+}
+
+li {
+    display: inline-block;
+    line-height: 0 80px;
+    margin: 0 10px;
+
+}
+
+li a {
+    color: white;
+    font-size: 20px;
+}
+
+
+
+
+
 body {
     font-family: 'Luxurious Roman', cursive;
-    background-color: rgb(241, 226, 226);
+    background-color: rgb(211, 206, 206);
+    margin: 0%;
 
 }
 
@@ -24,6 +61,7 @@ span {
 .flexible-container {
     display: flex;
     margin-top: 5%;
+
 }
 
 .frist-web {
